stateDiagram-v2
    [*] --> Invisible : Window Window([Frame owner])
    [*] --> Invisible : Window Window([Window owner])
    [*] --> Invisible : Window Window([Window owner], [GraphicsConfiguration gc])

    Invisible --> Invisible : List<Image> getIconImages()
    Invisible --> Invisible : void setIconImages([List icons])
    Invisible --> Invisible : void setIconImage([Image image])
    Invisible --> Invisible : void addNotify()
    Invisible --> Invisible : void setMinimumSize([Dimension minimumSize])
    Invisible --> Invisible : void setSize([Dimension d])
    Invisible --> Invisible : void setSize([int width], [int height])
    Invisible --> Invisible : void setLocation([int x], [int y])
    Invisible --> Invisible : void setLocation([Point p])
    Invisible --> Invisible : void reshape([int x], [int y], [int width], [int height])
    Invisible --> Invisible : void setType([Window.Type type])
    Invisible --> Invisible : Window.Type getType()
    Invisible --> Invisible : Toolkit getToolkit()
    Invisible --> Invisible : String getWarningString()
    Invisible --> Invisible : Locale getLocale()
    Invisible --> Invisible : InputContext getInputContext()
    Invisible --> Invisible : void setCursor([Cursor cursor])
    Invisible --> Invisible : Window getOwner()
    Invisible --> Invisible : Window[] getOwnedWindows()
    Invisible --> Invisible : Window[] getWindows()
    Invisible --> Invisible : Window[] getOwnerlessWindows()
    Invisible --> Invisible : void setModalExclusionType([Dialog.ModalExclusionType exclusionType])
    Invisible --> Invisible : Dialog.ModalExclusionType getModalExclusionType()
    Invisible --> Invisible : void addWindowListener([WindowListener l])
    Invisible --> Invisible : void addWindowStateListener([WindowStateListener l])
    Invisible --> Invisible : void addWindowFocusListener([WindowFocusListener l])
    Invisible --> Invisible : void removeWindowListener([WindowListener l])
    Invisible --> Invisible : void removeWindowStateListener([WindowStateListener l])
    Invisible --> Invisible : void removeWindowFocusListener([WindowFocusListener l])
    Invisible --> Invisible : WindowListener[] getWindowListeners()
    Invisible --> Invisible : WindowFocusListener[] getWindowFocusListeners()
    Invisible --> Invisible : WindowStateListener[] getWindowStateListeners()
    Invisible --> Invisible : void getListeners([Class listenerType])
    Invisible --> Invisible : void processEvent([AWTEvent e])
    Invisible --> Invisible : void processWindowEvent([WindowEvent e])
    Invisible --> Invisible : void processWindowFocusEvent([WindowEvent e])
    Invisible --> Invisible : void processWindowStateEvent([WindowEvent e])
    Invisible --> Invisible : void setAlwaysOnTop([boolean alwaysOnTop])
    Invisible --> Invisible : boolean isAlwaysOnTopSupported()
    Invisible --> Invisible : boolean isAlwaysOnTop()
    Invisible --> Invisible : Component getFocusOwner()
    Invisible --> Invisible : Component getMostRecentFocusOwner()
    Invisible --> Invisible : boolean isActive()
    Invisible --> Invisible : boolean isFocused()
    Invisible --> Invisible : Set<AWTKeyStroke> getFocusTraversalKeys([int id])
    Invisible --> Invisible : void setFocusCycleRoot([boolean focusCycleRoot])
    Invisible --> Invisible : boolean isFocusCycleRoot()
    Invisible --> Invisible : Container getFocusCycleRootAncestor()
    Invisible --> Invisible : boolean isFocusableWindow()
    Invisible --> Invisible : boolean getFocusableWindowState()
    Invisible --> Invisible : void setFocusableWindowState([boolean focusableWindowState])
    Invisible --> Invisible : void setAutoRequestFocus([boolean autoRequestFocus])
    Invisible --> Invisible : boolean isAutoRequestFocus()
    Invisible --> Invisible : void addPropertyChangeListener([PropertyChangeListener listener])
    Invisible --> Invisible : void addPropertyChangeListener([String propertyName], [PropertyChangeListener listener])
    Invisible --> Invisible : boolean isValidateRoot()
    Invisible --> Invisible : void postEvent([Event e])
    Invisible --> Invisible : boolean isShowing()
    Invisible --> Invisible : void applyResourceBundle([ResourceBundle rb])
    Invisible --> Invisible : void applyResourceBundle([String rbName])
    Invisible --> Invisible : AccessibleContext getAccessibleContext()
    Invisible --> Invisible : void setLocationRelativeTo([Component c])
    Invisible --> Invisible : BufferStrategy getBufferStrategy()
    Invisible --> Invisible : void setLocationByPlatform([boolean locationByPlatform])
    Invisible --> Invisible : boolean isLocationByPlatform()
    Invisible --> Invisible : void setBounds([int x], [int y], [int width], [int height])
    Invisible --> Invisible : void setBounds([Rectangle r])
    Invisible --> Invisible : float getOpacity()
    Invisible --> Invisible : void setOpacity([float opacity])
    Invisible --> Invisible : Shape getShape()
    Invisible --> Invisible : void setShape([Shape shape])
    Invisible --> Invisible : Color getBackground()
    Invisible --> Invisible : void setBackground([Color bgColor])
    Invisible --> Invisible : boolean isOpaque()
    Invisible --> Invisible : void paint([Graphics g])

    Invisible --> Displayable : void pack()
    Invisible --> Visible : void show()
    Invisible --> Visible : void setVisible([boolean b])

    Displayable --> Displayable : List<Image> getIconImages()
    Displayable --> Displayable : void setIconImages([List icons])
    Displayable --> Displayable : void setIconImage([Image image])
    Displayable --> Displayable : void addNotify()
    Displayable --> Displayable : void pack()
    Displayable --> Displayable : void setMinimumSize([Dimension minimumSize])
    Displayable --> Displayable : void setSize([Dimension d])
    Displayable --> Displayable : void setSize([int width], [int height])
    Displayable --> Displayable : void setLocation([int x], [int y])
    Displayable --> Displayable : void setLocation([Point p])
    Displayable --> Displayable : void reshape([int x], [int y], [int width], [int height])
    Displayable --> Displayable : Window.Type getType()
    Displayable --> Displayable : Toolkit getToolkit()
    Displayable --> Displayable : String getWarningString()
    Displayable --> Displayable : Locale getLocale()
    Displayable --> Displayable : InputContext getInputContext()
    Displayable --> Displayable : void setCursor([Cursor cursor])
    Displayable --> Displayable : Window getOwner()
    Displayable --> Displayable : Window[] getOwnedWindows()
    Displayable --> Displayable : Window[] getWindows()
    Displayable --> Displayable : Window[] getOwnerlessWindows()
    Displayable --> Displayable : void setModalExclusionType([Dialog.ModalExclusionType exclusionType])
    Displayable --> Displayable : Dialog.ModalExclusionType getModalExclusionType()
    Displayable --> Displayable : void addWindowListener([WindowListener l])
    Displayable --> Displayable : void addWindowStateListener([WindowStateListener l])
    Displayable --> Displayable : void addWindowFocusListener([WindowFocusListener l])
    Displayable --> Displayable : void removeWindowListener([WindowListener l])
    Displayable --> Displayable : void removeWindowStateListener([WindowStateListener l])
    Displayable --> Displayable : void removeWindowFocusListener([WindowFocusListener l])
    Displayable --> Displayable : WindowListener[] getWindowListeners()
    Displayable --> Displayable : WindowFocusListener[] getWindowFocusListeners()
    Displayable --> Displayable : WindowStateListener[] getWindowStateListeners()
    Displayable --> Displayable : void getListeners([Class listenerType])
    Displayable --> Displayable : void processEvent([AWTEvent e])
    Displayable --> Displayable : void processWindowEvent([WindowEvent e])
    Displayable --> Displayable : void processWindowFocusEvent([WindowEvent e])
    Displayable --> Displayable : void processWindowStateEvent([WindowEvent e])
    Displayable --> Displayable : void setAlwaysOnTop([boolean alwaysOnTop])
    Displayable --> Displayable : boolean isAlwaysOnTopSupported()
    Displayable --> Displayable : boolean isAlwaysOnTop()
    Displayable --> Displayable : Component getFocusOwner()
    Displayable --> Displayable : Component getMostRecentFocusOwner()
    Displayable --> Displayable : boolean isActive()
    Displayable --> Displayable : boolean isFocused()
    Displayable --> Displayable : Set<AWTKeyStroke> getFocusTraversalKeys([int id])
    Displayable --> Displayable : void setFocusCycleRoot([boolean focusCycleRoot])
    Displayable --> Displayable : boolean isFocusCycleRoot()
    Displayable --> Displayable : Container getFocusCycleRootAncestor()
    Displayable --> Displayable : boolean isFocusableWindow()
    Displayable --> Displayable : boolean getFocusableWindowState()
    Displayable --> Displayable : void setFocusableWindowState([boolean focusableWindowState])
    Displayable --> Displayable : void setAutoRequestFocus([boolean autoRequestFocus])
    Displayable --> Displayable : boolean isAutoRequestFocus()
    Displayable --> Displayable : void addPropertyChangeListener([PropertyChangeListener listener])
    Displayable --> Displayable : void addPropertyChangeListener([String propertyName], [PropertyChangeListener listener])
    Displayable --> Displayable : boolean isValidateRoot()
    Displayable --> Displayable : void postEvent([Event e])
    Displayable --> Displayable : boolean isShowing()
    Displayable --> Displayable : void applyResourceBundle([ResourceBundle rb])
    Displayable --> Displayable : void applyResourceBundle([String rbName])
    Displayable --> Displayable : AccessibleContext getAccessibleContext()
    Displayable --> Displayable : void setLocationRelativeTo([Component c])
    Displayable --> Displayable : void createBufferStrategy([int numBuffers])
    Displayable --> Displayable : void createBufferStrategy([int numBuffers], [BufferCapabilities caps])
    Displayable --> Displayable : BufferStrategy getBufferStrategy()
    Displayable --> Displayable : void setLocationByPlatform([boolean locationByPlatform])
    Displayable --> Displayable : boolean isLocationByPlatform()
    Displayable --> Displayable : void setBounds([int x], [int y], [int width], [int height])
    Displayable --> Displayable : void setBounds([Rectangle r])
    Displayable --> Displayable : float getOpacity()
    Displayable --> Displayable : void setOpacity([float opacity])
    Displayable --> Displayable : Shape getShape()
    Displayable --> Displayable : void setShape([Shape shape])
    Displayable --> Displayable : Color getBackground()
    Displayable --> Displayable : void setBackground([Color bgColor])
    Displayable --> Displayable : boolean isOpaque()
    Displayable --> Displayable : void paint([Graphics g])
    Displayable --> Displayable : void hide()

    Displayable --> Visible : void show()
    Displayable --> Visible : void setVisible([boolean b])
    Displayable --> Invisible : void dispose()

    Visible --> Visible : List<Image> getIconImages()
    Visible --> Visible : void setIconImages([List icons])
    Visible --> Visible : void setIconImage([Image image])
    Visible --> Visible : void addNotify()
    Visible --> Visible : void pack()
    Visible --> Visible : void setMinimumSize([Dimension minimumSize])
    Visible --> Visible : void setSize([Dimension d])
    Visible --> Visible : void setSize([int width], [int height])
    Visible --> Visible : void setLocation([int x], [int y])
    Visible --> Visible : void setLocation([Point p])
    Visible --> Visible : void reshape([int x], [int y], [int width], [int height])
    Visible --> Visible : Window.Type getType()
    Visible --> Visible : Toolkit getToolkit()
    Visible --> Visible : String getWarningString()
    Visible --> Visible : Locale getLocale()
    Visible --> Visible : InputContext getInputContext()
    Visible --> Visible : void setCursor([Cursor cursor])
    Visible --> Visible : Window getOwner()
    Visible --> Visible : Window[] getOwnedWindows()
    Visible --> Visible : Window[] getWindows()
    Visible --> Visible : Window[] getOwnerlessWindows()
    Visible --> Visible : void setModalExclusionType([Dialog.ModalExclusionType exclusionType])
    Visible --> Visible : Dialog.ModalExclusionType getModalExclusionType()
    Visible --> Visible : void addWindowListener([WindowListener l])
    Visible --> Visible : void addWindowStateListener([WindowStateListener l])
    Visible --> Visible : void addWindowFocusListener([WindowFocusListener l])
    Visible --> Visible : void removeWindowListener([WindowListener l])
    Visible --> Visible : void removeWindowStateListener([WindowStateListener l])
    Visible --> Visible : void removeWindowFocusListener([WindowFocusListener l])
    Visible --> Visible : WindowListener[] getWindowListeners()
    Visible --> Visible : WindowFocusListener[] getWindowFocusListeners()
    Visible --> Visible : WindowStateListener[] getWindowStateListeners()
    Visible --> Visible : void getListeners([Class listenerType])
    Visible --> Visible : void processEvent([AWTEvent e])
    Visible --> Visible : void processWindowEvent([WindowEvent e])
    Visible --> Visible : void processWindowFocusEvent([WindowEvent e])
    Visible --> Visible : void processWindowStateEvent([WindowEvent e])
    Visible --> Visible : void setAlwaysOnTop([boolean alwaysOnTop])
    Visible --> Visible : boolean isAlwaysOnTopSupported()
    Visible --> Visible : boolean isAlwaysOnTop()
    Visible --> Visible : Component getFocusOwner()
    Visible --> Visible : Component getMostRecentFocusOwner()
    Visible --> Visible : boolean isActive()
    Visible --> Visible : boolean isFocused()
    Visible --> Visible : Set<AWTKeyStroke> getFocusTraversalKeys([int id])
    Visible --> Visible : void setFocusCycleRoot([boolean focusCycleRoot])
    Visible --> Visible : boolean isFocusCycleRoot()
    Visible --> Visible : Container getFocusCycleRootAncestor()
    Visible --> Visible : boolean isFocusableWindow()
    Visible --> Visible : boolean getFocusableWindowState()
    Visible --> Visible : void setFocusableWindowState([boolean focusableWindowState])
    Visible --> Visible : void setAutoRequestFocus([boolean autoRequestFocus])
    Visible --> Visible : boolean isAutoRequestFocus()
    Visible --> Visible : void addPropertyChangeListener([PropertyChangeListener listener])
    Visible --> Visible : void addPropertyChangeListener([String propertyName], [PropertyChangeListener listener])
    Visible --> Visible : boolean isValidateRoot()
    Visible --> Visible : void postEvent([Event e])
    Visible --> Visible : boolean isShowing()
    Visible --> Visible : void applyResourceBundle([ResourceBundle rb])
    Visible --> Visible : void applyResourceBundle([String rbName])
    Visible --> Visible : AccessibleContext getAccessibleContext()
    Visible --> Visible : void setLocationRelativeTo([Component c])
    Visible --> Visible : void createBufferStrategy([int numBuffers])
    Visible --> Visible : void createBufferStrategy([int numBuffers], [BufferCapabilities caps])
    Visible --> Visible : BufferStrategy getBufferStrategy()
    Visible --> Visible : boolean isLocationByPlatform()
    Visible --> Visible : void setBounds([int x], [int y], [int width], [int height])
    Visible --> Visible : void setBounds([Rectangle r])
    Visible --> Visible : float getOpacity()
    Visible --> Visible : void setOpacity([float opacity])
    Visible --> Visible : Shape getShape()
    Visible --> Visible : void setShape([Shape shape])
    Visible --> Visible : Color getBackground()
    Visible --> Visible : void setBackground([Color bgColor])
    Visible --> Visible : boolean isOpaque()
    Visible --> Visible : void paint([Graphics g])
    Visible --> Visible : void toFront()
    Visible --> Visible : void toBack()
    Visible --> Visible : void setVisible([boolean b])

    Visible --> Displayable : void hide()
    Visible --> Invisible : void dispose()

    note right of Invisible
        Window is not displayable.
        setType() is only valid here.
        createBufferStrategy() is forbidden.
        setLocationByPlatform(true) is allowed here.
    end note

    note right of Displayable
        Window is displayable but not showing.
        setType() is forbidden (throws IllegalComponentStateException).
        createBufferStrategy() is allowed.
        setLocationByPlatform(true) is allowed.
    end note

    note right of Visible
        Window is displayable and showing on screen.
        setType() is forbidden (throws IllegalComponentStateException).
        setLocationByPlatform(true) is forbidden (throws IllegalComponentStateException).
        toFront() and toBack() are effective only here.
    end note
